# MyPathTracer

./: .gitignore  BVH.cpp  BVH.h  BoundingBox.h  CMakeLists.txt  Intersection.h  Material.cpp  Material.h  Mesh.h  Object.h  README.md  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Triangle.h  global.h  main.cpp
sampleExe/: TheBox.ppm
